--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
-    "extends": "standard",
+    "extends": "eslint:recommended",
     "env": {
       "browser": true,
       "jquery": true,
       "es6": true,
       "node": true
+    },
+    "globals": {
+      "d3": true
     },
     "plugins": ["babel"],
     "parser": "babel-eslint",
