--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       "no-unused-vars": "warn",
       "no-undef": "error",
       "no-console": "off",
+      "no-extra-boolean-cast": "off",
       "constructor-super": "warn",
       "valid-typeof": "warn",
       "quotes": ["error", "single", { "allowTemplateLiterals": true }],
