--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,39 @@
 {
-    "extends": "eslint:recommended",
-    "env": {
-      "browser": true,
-      "jquery": true,
-      "es6": true,
-      "node": true
-    },
-    "globals": {
-      "d3": true
-    },
-    "plugins": ["babel"],
-    "parser": "babel-eslint",
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "ecmaFeatures": {
-        "allowImportExportEverywhere": false,
-        "codeFrame": false,
-        "jsx": true,
-        "sourceType": "module"
-      },
+  "extends": "eslint:recommended",
+  "env": {
+    "browser": true,
+    "jquery": true,
+    "es6": true,
+    "node": true
+  },
+  "globals": {
+    "d3": true
+  },
+  "plugins": ["babel"],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "ecmaFeatures": {
+      "allowImportExportEverywhere": false,
+      "codeFrame": false,
+      "jsx": true,
       "sourceType": "module"
     },
-    "rules": {
-      "strict": "off",
-      "no-const-assign": "warn",
-      "no-this-before-super": "warn",
-      "no-unreachable": "warn",
-      "no-unused-vars": "warn",
-      "no-undef": "error",
-      "no-console": "off",
-      "no-extra-boolean-cast": "off",
-      "constructor-super": "warn",
-      "valid-typeof": "warn",
-      "quotes": ["error", "single", { "allowTemplateLiterals": true }],
-      "semi": "error",
-      "linebreak-style": ["error", "unix"]
-    }
+    "sourceType": "module"
+  },
+  "rules": {
+    "strict": "off",
+    "no-const-assign": "warn",
+    "no-this-before-super": "warn",
+    "no-unreachable": "warn",
+    "no-unused-vars": "warn",
+    "no-undef": "error",
+    "no-console": "off",
+    "no-extra-boolean-cast": "off",
+    "constructor-super": "warn",
+    "valid-typeof": "warn",
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "semi": ["error", "always"],
+    "linebreak-style": ["error", "unix"]
   }
-  
+}
