--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "exec": "PATH=$PATH:./node_modules/.bin",
     "clean": "yarn run exec && rimraf dist",
     "clean-full": "yarn run clean && rimraf node_modules *.lock *.log",
-    "serve": "yarn run exec && webpack-dev-server --mode=development"
+    "watch": "yarn run exec && webpack-dev-server --config webpack.config.js --watch --progress --mode=development",
+    "build": "yarn run exec && webpack --config webpack.config.js --progress --color --mode=production"
   },
   "devDependencies": {
     "axios": "^0.18.0",
@@ -26,8 +27,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.0.0",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "d3": "v3",
+    "d3": "^4.13.0",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -41,8 +43,11 @@
     "jquery": "^3.3.1",
     "jquery-contextmenu": "^2.6.4",
     "lodash": "^4.17.5",
+    "node-sass": "^4.7.2",
     "popper.js": "^1.14.1",
     "pug": "^2.0.1",
+    "rimraf": "^2.6.2",
+    "sass-loader": "^6.0.7",
     "string-hash": "^1.1.3",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
