Change always semi-colon to never

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
     "constructor-super": "warn",
     "valid-typeof": "warn",
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
-    "semi": ["error", "always"],
+    "semi": ["error", "never"],
     "linebreak-style": ["error", "unix"]
   }
 }
