--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,12 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Chrome Debugger",
-      "url": "http://localhost:8888",
-      "webRoot": "${workspaceFolder}"
+      "name": "Chrome Front End Debugger",
+      "url": "http://localhost:2000",
+      "webRoot": "/"
     }
   ]
 }
