--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
-    "webpack-jquery-ui": "^1.0.0"
+    "webpack-dev-server": "^3.1.1"
   }
 }
