--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -20,7 +20,9 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^5.0.0",
     "jest": "^22.4.3"
   }
