--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -9,6 +9,13 @@
   },
   "plugins": ["babel"],
   "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 8,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "sourceType": "module"
+  },
   "rules": {
     "semi": [2, "never"]
   }
