--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^5.0.0",
     "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "font-awesome": "^4.7.0",
     "graph-data-structure": "^1.8.0",
