--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,11 @@
   },
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "babel-cli": "^6.26.0"
-  },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -29,6 +28,8 @@
     "eslint-plugin-babel": "^5.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "nodemon": "^1.17.3",
+    "regenerator-runtime": "^0.11.1"
   }
 }
