--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,12 @@
   },
   "license": "MIT",
   "private": false,
-  "dependencies": {
-    "babel-cli": "^6.26.0"
-  },
   "devDependencies": {
     "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
@@ -47,8 +46,10 @@
     "jquery-contextmenu": "^2.6.4",
     "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3",
     "popper.js": "^1.14.3",
     "pug": "^2.0.3",
+    "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
