--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,18 @@
   },
   "license": "MIT",
   "private": false,
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
+    "d3": "^5.0.0",
+    "font-awesome": "^4.7.0",
+    "graph-data-structure": "^1.8.0",
+    "jquery": "^3.3.1",
+    "jquery-contextmenu": "^2.6.4",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.14.3"
+  },
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
@@ -25,10 +35,8 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "bootstrap": "^4.0.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "d3": "^5.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
@@ -37,17 +45,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
-    "font-awesome": "^4.7.0",
-    "graph-data-structure": "^1.8.0",
     "img-loader": "^2.0.1",
     "imports-loader": "^0.8.0",
     "jest": "^22.4.3",
-    "jquery": "^3.3.1",
-    "jquery-contextmenu": "^2.6.4",
-    "lodash": "^4.17.5",
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.3",
-    "popper.js": "^1.14.3",
     "pug": "^2.0.3",
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^6.0.7",
