--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
     "nodemon": "^1.17.3",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.2"
   }
 }
