--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "nodemon": "^1.17.3",
     "pug": "^2.0.3",
     "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
