--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "watch:dev-server": "npx webpack-dev-server --watch --progress --mode=development",
-    "watch:test": "npx jest --watchAll"
+    "watch:dev-server": "npx webpack-dev-server --watch --progress --mode=development"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -32,7 +31,6 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
-    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
@@ -51,7 +49,6 @@
     "file-loader": "^1.1.11",
     "img-loader": "^2.0.1",
     "imports-loader": "^0.8.0",
-    "jest": "^22.4.3",
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.3",
     "pug": "^2.0.3",
