--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "font-awesome": "^4.7.0",
     "graph-data-structure": "^1.8.0",
     "jquery": "^3.3.1",
-    "jquery-contextmenu": "^3.0.0-beta.2",
+    "jquery-contextmenu": "^2.6.4",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.5",
     "popper.js": "^1.14.3",
