--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "graph-data-structure": "^1.8.0",
     "jquery": "^3.3.1",
     "jquery-contextmenu": "^2.6.4",
-    "jquery-ui": "^1.12.1",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "lodash": "^4.17.5",
     "popper.js": "^1.14.3",
     "webpack-dev-server": "^3.1.1"
