--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,7 @@
     "jquery-contextmenu": "^2.6.4",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "lodash": "^4.17.5",
-    "popper.js": "^1.14.3",
-    "webpack-dev-server": "^3.1.1"
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -43,16 +42,19 @@
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-babel": "^5.0.0",
     "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^1.1.11",
     "img-loader": "^2.0.1",
     "imports-loader": "^0.8.0",
     "node-sass": "^4.8.3",
     "nodemon": "^1.17.3",
+    "prettier": "^1.12.0",
     "pug": "^2.0.3",
     "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
@@ -60,6 +62,7 @@
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.1"
   }
 }
