Remove env test

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -1,8 +1,6 @@
 {
-  "presets": ["es2015", "stage-0"],
-  "env": {
-    "test": {
-      "presets": ["es2015", "stage-0"]
-    }
-  }
+  "presets": [
+    "es2015",
+    "stage-0"
+  ]
 }
