--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -2,5 +2,14 @@
   "presets": [
     "es2015",
     "stage-0"
+  ],
+  "plugins": [
+    "babel-plugin-transform-class-properties",
+    [
+      "babel-plugin-transform-react-jsx",
+      {
+        "pragma": "dom"
+      }
+    ]
   ]
 }
