--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,70 +1,73 @@
 {
-  "name": "@workflow-designer/front-end",
-  "version": "0.0.1",
-  "description": "Workflow Designer for Basic Image Processing (Front-End)",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ImKK-000/workflow-designer.git"
-  },
-  "author": {
-    "name": "Nattakit Boonyang",
-    "email": "nattakit.boonyang@gmail.com",
-    "url": "https://github.com/ImKK-000"
-  },
-  "license": "MIT",
-  "private": false,
-  "scripts": {
-    "dev": "npx webpack-dev-server --watch --progress --mode=development",
-    "build": "npx webpack --progress --mode=production",
-    "full-clean": "npx rimraf dist node_modules *.log"
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
-    "d3": "^5.0.0",
-    "font-awesome": "^4.7.0",
-    "graph-data-structure": "^1.8.0",
-    "jquery": "^3.3.1",
-    "jquery-contextmenu": "^2.6.4",
-    "jquery-ui-bundle": "^1.12.1-migrate",
-    "lodash": "^4.17.5",
-    "popper.js": "^1.14.3"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-babel": "^5.0.0",
-    "eslint-plugin-import": "^2.10.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "file-loader": "^1.1.11",
-    "img-loader": "^2.0.1",
-    "imports-loader": "^0.8.0",
-    "node-sass": "^4.8.3",
-    "nodemon": "^1.17.3",
-    "prettier": "^1.12.0",
-    "pug": "^2.0.3",
-    "regenerator-runtime": "^0.11.1",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.1"
-  }
+	"name": "@workflow-designer/front-end",
+	"version": "0.0.1",
+	"description": "Workflow Designer for Basic Image Processing (Front-End)",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ImKK-000/workflow-designer.git"
+	},
+	"author": {
+		"name": "Nattakit Boonyang",
+		"email": "nattakit.boonyang@gmail.com",
+		"url": "https://github.com/ImKK-000"
+	},
+	"license": "MIT",
+	"private": false,
+	"scripts": {
+		"dev": "npx webpack-dev-server --watch --progress --mode=development",
+		"build": "npx webpack --progress --mode=production",
+		"full-clean": "npx rimraf dist node_modules *.log"
+	},
+	"dependencies": {
+		"axios": "^0.18.0",
+		"bootstrap": "^4.0.0",
+		"d3": "^5.0.0",
+		"font-awesome": "^4.7.0",
+		"graph-data-structure": "^1.8.0",
+		"jquery": "^3.3.1",
+		"jquery-contextmenu": "^2.6.4",
+		"jquery-ui-bundle": "^1.12.1-migrate",
+		"lodash": "^4.17.5",
+		"jsx-render": "^0.4.0",
+		"popper.js": "^1.14.3"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^8.2.2",
+		"babel-loader": "^7.1.4",
+		"babel-plugin-syntax-jsx": "^6.18.0",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-es2017": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"babel-register": "^6.26.0",
+		"clean-webpack-plugin": "^0.1.19",
+		"css-loader": "^0.28.11",
+		"eslint": "^4.19.1",
+		"eslint-config-airbnb": "^16.1.0",
+		"eslint-config-prettier": "^2.9.0",
+		"eslint-loader": "^2.0.0",
+		"eslint-plugin-babel": "^5.0.0",
+		"eslint-plugin-import": "^2.10.0",
+		"eslint-plugin-jsx-a11y": "^6.0.3",
+		"eslint-plugin-prettier": "^2.6.0",
+		"eslint-plugin-react": "^7.7.0",
+		"file-loader": "^1.1.11",
+		"img-loader": "^2.0.1",
+		"imports-loader": "^0.8.0",
+		"node-sass": "^4.8.3",
+		"nodemon": "^1.17.3",
+		"prettier": "^1.12.0",
+		"pug": "^2.0.3",
+		"regenerator-runtime": "^0.11.1",
+		"rimraf": "^2.6.2",
+		"sass-loader": "^6.0.7",
+		"style-loader": "^0.20.3",
+		"url-loader": "^1.0.1",
+		"webpack": "^4.5.0",
+		"webpack-cli": "^2.0.14",
+		"webpack-dev-server": "^3.1.1"
+	}
 }
