--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
 		"axios": "^0.18.0",
 		"bootstrap": "^4.0.0",
 		"d3": "^5.0.0",
+		"dm-file-uploader": "^1.0.2",
 		"font-awesome": "^4.7.0",
 		"graph-data-structure": "^1.8.0",
 		"jquery": "^3.3.1",
@@ -44,6 +45,7 @@
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.26.0",
 		"clean-webpack-plugin": "^0.1.19",
+		"cors": "^2.8.4",
 		"css-loader": "^0.28.11",
 		"eslint": "^4.19.1",
 		"eslint-config-airbnb": "^16.1.0",
