--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
 		"jquery-ui-bundle": "^1.12.1-migrate",
 		"jsx-render": "^0.4.0",
 		"lodash": "^4.17.5",
-		"popper.js": "^1.14.3"
+		"popper.js": "^1.14.3",
+		"validator": "^9.4.1"
 	},
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
