--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
 		"jsx-render": "^0.4.0",
 		"lodash": "^4.17.5",
 		"popper.js": "^1.14.3",
+		"roboto-fontface": "^0.9.0",
 		"validator": "^9.4.1"
 	},
 	"devDependencies": {
