--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,12 +59,14 @@
 		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-react": "^7.7.0",
 		"file-loader": "^1.1.11",
+		"html-webpack-plugin": "^3.2.0",
 		"img-loader": "^2.0.1",
 		"imports-loader": "^0.8.0",
 		"node-sass": "^4.8.3",
 		"nodemon": "^1.17.3",
 		"prettier": "^1.12.0",
 		"pug": "^2.0.3",
+		"pug-loader": "^2.4.0",
 		"regenerator-runtime": "^0.11.1",
 		"rimraf": "^2.6.2",
 		"sass-loader": "^6.0.7",
