--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
 	"scripts": {
 		"lint": "npx nodemon --exec eslint --fix src",
 		"dev": "npx webpack-dev-server --watch --progress --mode=development",
+		"dev:mini": "npx nodemon mini-server.js",
+		"dev:test-build": "yarn build && yarn dev:mini",
 		"build": "npx webpack --progress --mode=production",
 		"full-clean": "npx rimraf dist node_modules *.log"
 	},
@@ -57,6 +59,7 @@
 		"eslint-plugin-jsx-a11y": "^6.0.3",
 		"eslint-plugin-prettier": "^2.6.0",
 		"eslint-plugin-react": "^7.7.0",
+		"express": "^4.16.3",
 		"file-loader": "^1.1.11",
 		"html-webpack-plugin": "^3.2.0",
 		"img-loader": "^2.0.1",
