--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,10 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "md5-file": "^4.0.0"
   }
 }
