--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "eslint": "^4.19.1",
@@ -35,6 +35,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
-    "md5-file": "^4.0.0"
+    "md5-file": "^4.0.0",
+    "opencv4nodejs": "^4.2.1",
+    "pm2": "^2.10.2"
   }
 }
