--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,7 @@
 		"babel-plugin-syntax-jsx": "^6.18.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.6.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babel-register": "^6.26.0",
 		"clean-webpack-plugin": "^0.1.19",
