--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "pm2": "^2.10.2"
   },
   "scripts": {
-    "start": "npx pm2 start app.js -i 4"
+    "start": "npx pm2 start app.js -i 4",
+    "dev": "npx nodemon src/app.js --exec babel-node --presets=env,stage-0"
   }
 }
