--- a/backend/package.json
+++ b/backend/package.json
@@ -29,12 +29,11 @@
     "md5-file": "^4.0.0",
     "nodemon": "^1.17.3",
     "opencv4nodejs": "^4.3.0",
-    "pm2": "^2.10.2",
     "production": "0.0.2",
     "rimraf": "^2.6.2"
   },
   "scripts": {
-    "start": "npx pm2 start lib/app.js -i 2",
+    "start": "node lib/app.js",
     "build-clean": "npx rimraf lib",
     "full-clean": "npm run build-clean && npx rimraf process_files node_modules *.log",
     "build": "npm run build-clean && npx babel src -d lib",
